# alfa-dataset-tools

./: .gitignore  README.md
alfa-cpp/: CMakeLists.txt  README.md
alfa-cpp/csv/: ConvertBagToCSV.sh  carbonZ_2018-07-18-15-53-31_1_engine_failure-diagnostics.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-failure_status-engines.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavctrl-path_dev.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavctrl-rpy.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavlink-from.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-compass_hdg.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-global.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-local.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-raw-fix.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-raw-gps_vel.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-rel_alt.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-imu-atm_pressure.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-imu-data.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-imu-data_raw.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-imu-mag.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-imu-temperature.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-local_position-odom.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-local_position-pose.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-local_position-velocity.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-nav_info-airspeed.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-nav_info-errors.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-nav_info-pitch.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-nav_info-roll.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-nav_info-velocity.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-nav_info-yaw.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-rc-in.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-rc-out.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-setpoint_raw-local.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-setpoint_raw-target_global.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-state.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-time_reference.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-vfr_hud.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-wind_estimation.csv  filelist.txt  sample.csv
alfa-cpp/csv/Incompatible/: carbonZ_2018-07-18-15-53-31_1_engine_failure-mavlink-from.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-battery.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-global.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-local.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-global_position-raw-fix.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-imu-mag.csv  carbonZ_2018-07-18-15-53-31_1_engine_failure-mavros-local_position-odom.csv
alfa-cpp/include/: commons.h  data_item.h  error.h  message.h  sequence.h  topic.h  topic2.h
alfa-cpp/src/: error.cpp  main.cpp  sample.cpp  topic.cpp
alfa-evaluate/: README.md
alfa-evaluate/src/alfa_eval/: CMakeLists.txt  CMakeLists.txt~  package.xml
alfa-evaluate/src/alfa_eval/launch/: publisher.launch
alfa-evaluate/src/alfa_eval/src/: CMakeLists.txt~  alfa-evaluate_node.cpp
alfa-evaluate/src/eval_msg/: CMakeLists.txt  CMakeLists.txt~  package.xml
alfa-evaluate/src/eval_msg/launch/: ROS_tutorial.launch
alfa-evaluate/src/eval_msg/msg/: evaluate.msg
alfa-matlab/: README.md  alfa.m  main.m
alfa-matlab/alfa-tools/: data_field.m  sequence.m  topic.m
alfa-python/: CMakeLists.txt  README.md  alfa_python.cpp  example.i  main.py
alfa-python/cmake/Modules/: BuildBoost.cmake
alfa-ros-msgs/: NavDataPair.msg  NavErrors.msg  NavVector3.msg  README.md
