<?xml version="1.0"?>
<package>
  <name>alfa-evaluate</name>
  <version>1.0.0</version>
  <description>Evaluating Bagfiles</description>


  <maintainer email="mmousaei@andrew.cmu.edu">Mohammadreza Mousaei</maintainer>
  <license>CMU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eval_msg</build_depend>
<!--   <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend> -->
</package>
