<?xml version="1.0"?>
<package>
  <name>eval_msg</name>
  <version>0.0.0</version>
  <description>The custom messages package for alfa-evaluate</description>

  <maintainer email="mmousaei@andrew.cmu.edu">Mohammadreza Mousaei</maintainer>
  <license>CMU</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>